--- a/mongodemo/src/main/resources/application.properties
+++ b/mongodemo/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.data.mongodb.uri=mongodb+srv://cloud:mongoadmin@cluster0-zwfud.mongodb.net/test?retryWrites=true&w=majority&authSource=admin&authMechanism=SCRAM-SHA-1
 spring.data.mongodb.database=demo
 
+spring.thymeleaf.cache=false
+
+welcome.message=MongoCloud Demo
+
 debug=false
