--- a/mongodemo/pom.xml
+++ b/mongodemo/pom.xml
@@ -33,6 +33,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        
+        <!-- Dev Tools -->
+        <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 		
 		<dependency>
 		    <groupId>log4j</groupId>
