--- a/mongodemo/src/main/resources/application.properties
+++ b/mongodemo/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.data.mongodb.uri=mongodb+srv://cloud:mongoadmin@cluster0-zwfud.mongodb.ne
 spring.data.mongodb.database=demo
 
 spring.thymeleaf.cache=false
+#spring.thymeleaf.prefix=file:src/main/resources/templates/
+
+# Static resources reloading during development
+#spring.resources.static-locations=file:src/main/resources/static/
+#spring.resources.cache-period=0
 
 welcome.message=MongoCloud Demo
 
