--- a/mongodemo/src/main/resources/application.properties
+++ b/mongodemo/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.thymeleaf.cache=false
 welcome.message=MongoCloud Demo
 
 debug=false
+
+#File Upload Params
+spring.http.multipart.max-file-size=1MB
+spring.http.multipart.max-request-size=1MB
