--- a/mongodemo/src/main/resources/application.properties
+++ b/mongodemo/src/main/resources/application.properties
@@ -15,3 +15,5 @@ debug=false
 #File Upload Params
 spring.http.multipart.max-file-size=1MB
 spring.http.multipart.max-request-size=1MB
+
+logging.level.org.mongodb.driver=ERROR
