--- a/mongodemo/pom.xml
+++ b/mongodemo/pom.xml
@@ -41,10 +41,16 @@
 			<optional>true</optional>
 		</dependency>
 		
-		<dependency>
+		<!--<dependency>
 		    <groupId>log4j</groupId>
 		    <artifactId>log4j</artifactId>
 		    <version>1.2.17</version>
+		</dependency>-->
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.2.3</version>
 		</dependency>
 		
 		<!-- jsoup HTML parser library @ http://jsoup.org/ -->
